--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,6 @@
 <resources>
     <string name="app_name">WallpaperChangerV2</string>
 
-    <string name="action_settings">Settings</string>
-
     <!-- Menu drawer -->
     <string name="menu_item_title1">Rechercher des fonds d\'écran</string>
     <string name="menu_item_flickr">depuis Flickr</string>
@@ -11,5 +9,25 @@
     <string name="menu_item_settings">Paramètres</string>
     <string name="menu_item_about">A propos</string>
 
+    <!-- Flickr -->
+    <string name="flickr_photos_search">flickr.photos.search</string>
+    <string name="flickr_cle_api">61d8670199834d7d7d48bcf570071a7a</string>
+    <string name="flickr_output">json</string>
+    <string name="flickr_no_json_callback">1</string>
+
+    <!-- Flickr url -->
+    <string name="flickr_url_1">https://farm</string>
+    <string name="flickr_url_2">.staticflickr.com/</string>
+    <string name="flickr_url_3">/</string>
+    <string name="flickr_url_4">_</string>
+    <string name="flickr_url_5">.jpg</string>
+
+    <!-- Network listener -->
+    <string name="waiting_for_connectivity_status">Waiting for connectivity status…</string>
+    <string name="wifi_signal_strength_changed">Wifi signal strength changed</string>
+    <string name="connectivity_status">Connectivity status:</string>
+    <string name="available_access_points">Available Access Points:</string>
+    <string name="wifi_signal_strength_change_counter">WiFi signal strength change counter:</string>
+    <string name="waiting_for_signal_strength_change">Waiting for signal strength change…</string>
 
 </resources>
